# Faculty

Teme/An 1/Semestrul 1/asc/asm+c/: main.c  (+3 more)
Teme/An 1/Semestrul 2/OOP/Produse/: CMakeLists.txt
Teme/An 1/Semestrul 2/OOP/QT/: CMakeLists.txt  main.cpp
Teme/An 1/Semestrul 2/OOP/examenOficial/: CMakeLists.txt  main.cpp  parcari.txt
Teme/An 1/Semestrul 2/OOP/examenOficial/Domain/: Parcare.cpp  Parcare.h
Teme/An 1/Semestrul 2/OOP/examenOficial/FileRepo/: FileRepo.cpp  FileRepo.h
Teme/An 1/Semestrul 2/OOP/examenOficial/GUI/: gui.cpp  gui.h  parcaregui.cpp  parcaregui.h
Teme/An 1/Semestrul 2/OOP/examenOficial/Observer/: Observer.cpp  Observer.h
Teme/An 1/Semestrul 2/OOP/examenOficial/Service/: service.cpp  service.h
Teme/An 1/Semestrul 2/OOP/examenOficial/Tests/: parcari.txt  tests.cpp  tests.h
Teme/An 1/Semestrul 2/OOP/examenOficial/Utils/: utils.cpp  utils.h
Teme/An 1/Semestrul 2/OOP/exercitiu/: CMakeLists.txt  main.cpp
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/: CMakeLists.txt  farmacie.txt  libLeaksAtExit.dylib  main.cpp
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/Observer/: Observable.cpp  Observable.h  Observer.h
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/repository/: inFileRepository.cpp  inFileRepository.h  repoAbstract.h  repository.cpp  repository.h
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/reteta/: reteta.cpp  reteta.h
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/service/: service.cpp  service.h
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/tests/: tests.cpp
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/ui/: FarmacieGUI.cpp  FarmacieGUI.h  RetetaGUI.cpp  RetetaGUI.h
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/undo/: undo.cpp  undo.h
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/utils/: utils.cpp
Teme/An 1/Semestrul 2/OOP/lab_10-11(GUI)/validare/: errors.cpp
Teme/An 1/Semestrul 2/OOP/lab_2-4Dinamic 2/: CMakeLists.txt
Teme/An 1/Semestrul 2/OOP/lab_2-4Dinamic 2/domain/: oferte.c  oferte.h
Teme/An 1/Semestrul 2/OOP/lab_2-4Dinamic 2/list/: lista.c  lista.h
Teme/An 1/Semestrul 2/OOP/lab_2-4Dinamic 2/service/: service.c  service.h
Teme/An 1/Semestrul 2/OOP/lab_2-4Dinamic 2/teste/: teste.c
Teme/An 1/Semestrul 2/OOP/lab_2-4Dinamic 2/ui/: ui.c  ui.h
Teme/An 1/Semestrul 2/OOP/lab_2-4Dinamic 2/utils/: utils.h
Teme/An 1/Semestrul 2/OOP/lab_7/: CMakeLists.txt  main.cpp
Teme/An 1/Semestrul 2/OOP/lab_7/Domain/: medicament.cpp  medicament.h
Teme/An 1/Semestrul 2/OOP/lab_7/List/: iterator.cpp  iterator.h  list.cpp  list.h
Teme/An 1/Semestrul 2/OOP/lab_7/Repository/: repository.cpp  repository.h
Teme/An 1/Semestrul 2/OOP/lab_7/Service/: service.cpp  service.h
Teme/An 1/Semestrul 2/OOP/lab_7/Tests/: tests.cpp  tests.h
Teme/An 1/Semestrul 2/OOP/lab_7/UI/: ui.cpp  ui.h
Teme/An 1/Semestrul 2/OOP/lab_7/Validare/: Validare.cpp  Validare.h
Teme/An 1/Semestrul 2/OOP/masini/: CMakeLists.txt  cars.txt  main.cpp
Teme/An 1/Semestrul 2/OOP/masini/Domain/: Car.cpp  Car.h
Teme/An 1/Semestrul 2/OOP/masini/Exceptions/: exceptions.cpp  exceptions.h
Teme/An 1/Semestrul 2/OOP/masini/FileRepo/: FileRepo.cpp  FileRepo.h
Teme/An 1/Semestrul 2/OOP/masini/GUI/: gui.cpp  gui.h
Teme/An 1/Semestrul 2/OOP/masini/Service/: service.cpp  service.h
Teme/An 1/Semestrul 2/OOP/masini/TableModel/: TableModel.cpp  TableModel.h
Teme/An 1/Semestrul 2/OOP/masini/Tests/: cars.txt  tests.cpp  tests.h
Teme/An 1/Semestrul 2/OOP/melodii_2/: CMakeLists.txt  main.cpp  songs.txt
Teme/An 1/Semestrul 2/OOP/melodii_2/Domain/: Song.cpp  Song.h
Teme/An 1/Semestrul 2/OOP/melodii_2/Exceptions/: Error.cpp  Error.h
Teme/An 1/Semestrul 2/OOP/melodii_2/FileRepository/: RepoFIle.cpp  RepoFIle.h
Teme/An 1/Semestrul 2/OOP/melodii_2/GUI/: drawing.cpp  drawing.h  gui.cpp  gui.h
Teme/An 1/Semestrul 2/OOP/melodii_2/Service/: Service.cpp  Service.h
Teme/An 1/Semestrul 2/OOP/melodii_2/TableModel/: TableModel.cpp  TableModel.h
Teme/An 1/Semestrul 2/OOP/melodii_2/Tests/: songs.txt  tests.cpp  tests.h
Teme/An 1/Semestrul 2/OOP/melodii_2/Validator/: Validator.cpp  Validator.h
Teme/An 1/Semestrul 2/OOP/simulare2/: CMakeLists.txt  apartamente  eroare.h  main.cpp
Teme/An 1/Semestrul 2/OOP/simulare2/domain/: Apartament.cpp  Apartament.h
Teme/An 1/Semestrul 2/OOP/simulare2/repository/: Lista.cpp  Lista.h
Teme/An 1/Semestrul 2/OOP/simulare2/service/: service.cpp  service.h
Teme/An 1/Semestrul 2/OOP/simulare2/teste/: teste.cpp  teste.h
Teme/An 1/Semestrul 2/OOP/simulare2/ui/: Console.cpp  Console.h
Teme/An 1/Semestrul 2/OOP/simulare2/utils/: utils.cpp  utils.h
Teme/An 1/Semestrul 2/OOP/simulareOficial/: CMakeLists.txt  elevi.txt  main.cpp
Teme/An 1/Semestrul 2/OOP/simulareOficial/domain/: Elev.cpp  Elev.h
Teme/An 1/Semestrul 2/OOP/simulareOficial/gui/: GUI.cpp  GUI.h
Teme/An 1/Semestrul 2/OOP/simulareOficial/repository/: Lista.cpp  Lista.h
Teme/An 1/Semestrul 2/OOP/simulareOficial/service/: Service.cpp  Service.h
Teme/An 1/Semestrul 2/OOP/simulareOficial/teste/: test.txt  teste.cpp  teste.h
Teme/An 1/Semestrul 2/OOP/simulareOficial/utils/: utils.cpp  utils.h
Teme/An 1/Semestrul 2/OOP/simulare_1/: CMakeLists.txt  main.cpp  placiDeBaza  procesoare
Teme/An 1/Semestrul 2/OOP/simulare_1/domain/: placaDeBaza.cpp  placaDeBaza.h  procesor.cpp  procesor.h
Teme/An 1/Semestrul 2/OOP/simulare_1/repository/: repo.cpp  repo.h
Teme/An 1/Semestrul 2/OOP/simulare_1/teste/: teste.cpp  teste.h
Teme/An 1/Semestrul 2/OOP/simulare_1/utils/: utils.cpp  utils.h
Teme/An 1/Semestrul 2/OOP/simulare_1/validare/: eroare.cpp  eroare.h
Teme/An 1/Semestrul 2/OOP/simulare_agricole/: CMakeLists.txt  main.cpp  utilaje.txt
Teme/An 1/Semestrul 2/OOP/simulare_agricole/Controller/: Controller.cpp  Controller.h
Teme/An 1/Semestrul 2/OOP/simulare_agricole/Domain/: Utilaj.cpp  Utilaj.h
Teme/An 1/Semestrul 2/OOP/simulare_agricole/Exceptions/: Exceptii.cpp  Exceptii.h
Teme/An 1/Semestrul 2/OOP/simulare_agricole/GUI/: GUI.cpp  GUI.h
Teme/An 1/Semestrul 2/OOP/simulare_agricole/Repository/: Repo.cpp  Repo.h
Teme/An 1/Semestrul 2/OOP/simulare_agricole/TableModel/: TableModel.cpp  TableModel.h
(+336 files in other folders)
