cmake_minimum_required(VERSION 3.27)
project(Implementare_Colectie___reprezentare_simplu_inlantuita_folosind_alocare_dinamica)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Implementare_Colectie___reprezentare_simplu_inlantuita_folosind_alocare_dinamica
        colectie.cpp
        colectie.h
        main.cpp)
